samples/_failures_safe/1761244994_94ad26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cefb429c.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_cefb429c.c:179:9: error: expected expression at end of input
  179 |         case
      |         ^~~~
./samples/SAFE/__tmp_cefb429c.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cefb429c.c:179:9: error: expected declaration or statement at end of input
